# medstudies

./: .gitignore  LICENSE  README.md  SETUP.md  exemplo_simulado.csv  pyproject.toml
.claude/: launch.json
medstudies/agent/: chat.py
medstudies/auth/: config.py  jwt_verifier.py  middleware.py  supabase_client.py
medstudies/engine/: planner.py  scorer.py  sm2.py  weekly_planner.py
medstudies/ingestion/: anki_adapter.py  base.py  csv_adapter.py  medcof_adapter.py  mock_exam_adapter.py
medstudies/interface/: api.py  cli.py  dashboard.html  manifest.json  sw.js
medstudies/notifications/: notifier.py
medstudies/persistence/: database.py  models.py  tenant.py
scripts/: install-startup.ps1  seed_demo.py  start.ps1
tests/: conftest.py  test_cli_commands.py  test_edital.py  test_ingestion.py  test_planner.py  test_scorer.py  test_sm2.py  test_tag.py
tests/auth/: test_jwt_verifier.py  test_middleware.py
tests/interface/: test_api_endpoints.py  test_auth_endpoints.py
tests/persistence/: test_tenant.py  test_user_model.py
