[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medstudies"
version = "0.1.0"
description = "Medical Study Agent Hub — intelligent daily study planner"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "typer[all]>=0.12",
    "rich>=13.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[project.scripts]
medstudies = "medstudies.interface.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["medstudies*"]
